[gd_scene load_steps=6 format=3 uid="uid://wvk1s2cu8gpm"]

[ext_resource type="Script" path="res://Scenes/Collectibles/healingpickup.gd" id="1_imder"]
[ext_resource type="Shader" path="res://Assets/Materials/ColourChange.gdshader" id="2_g4it2"]
[ext_resource type="Texture2D" uid="uid://bi6fu24en2y2e" path="res://Assets/Artwork/bullets/neutrino-shot.png" id="3_35i4t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_43jfh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3e7b5"]
shader = ExtResource("2_g4it2")
shader_parameter/custom_color = Color(0, 1, 0, 0.568627)

[node name="Node2D" type="Area2D"]
collision_layer = 8
script = ExtResource("1_imder")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_43jfh")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 40
emission_shape = 1
emission_sphere_radius = 35.91
gravity = Vector2(2.08165e-12, 2.08165e-12)
scale_amount_min = 0.2
scale_amount_max = 3.0
color = Color(0, 1, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_3e7b5")
rotation = 0.809339
scale = Vector2(4, 4)
texture = ExtResource("3_35i4t")

[node name="PickupExpire" type="Timer" parent="."]
wait_time = 10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="PickupExpire" to="." method="_on_expire_timer_end"]
